--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -40,12 +40,12 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:gravity="center"
-            android:textSize="@dimen/settings_text_size"
-            android:textColor="@color/black"
             android:fontFamily="@font/ys_display"
+            android:gravity="center"
+            android:letterSpacing="@dimen/main_letters_spacing"
             android:text="@string/dark_mode"
-            android:letterSpacing="@dimen/main_letters_spacing"/>
+            android:textColor="@color/black"
+            android:textSize="@dimen/settings_text_size" />
 
         <Space
             android:layout_width="0dp"
