--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/background_color"
     android:padding="@dimen/default_padding"
-    android:orientation="vertical">
+    android:background="?attr/colorSecondary"
+    android:orientation="vertical"
+    style="@style/Theme.MyApp">
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="56dp"
         android:text="@string/app_name"
-        android:fontFamily="@font/ys_display"
+        android:fontFamily="@font/ys_display_medium"
         android:textColor="@color/white"
         android:textSize="@dimen/main_screen_text_size"
         android:letterSpacing="@dimen/main_letters_spacing" />
@@ -22,42 +22,21 @@
         android:id="@+id/search_button"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
-        app:cornerRadius = "@dimen/main_corners_radius"
         android:text="@string/search"
-        android:layout_marginTop="5dp"
-        android:fontFamily="@font/ys_display"
-        android:backgroundTint="@color/white"
-        android:textAllCaps="false"
-        android:textColor="@color/black"
-        android:textStyle="bold"
-        android:letterSpacing="@dimen/main_letters_spacing"
-        android:textSize="@dimen/main_screen_text_size"
         app:icon = "@drawable/search_ic"
-        app:iconGravity ="textStart"
-        app:iconTint="@color/black">
+        app:iconTint="@color/black"
+        style="@style/MenuButtons">
 
     </Button>
-
 
 
     <Button
         android:id="@+id/mediateka_button"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
         android:text="@string/mediateka"
-        android:backgroundTint="@color/white"
-        android:fontFamily="@font/ys_display"
-        app:cornerRadius = "@dimen/main_corners_radius"
-        android:textAllCaps="false"
-        android:textColor="@color/black"
-        android:textStyle="bold"
-        android:textSize="@dimen/main_screen_text_size"
-        android:letterSpacing="@dimen/main_letters_spacing"
-        android:layout_marginTop="5dp"
+        style="@style/MenuButtons"
         app:icon="@drawable/music_ic"
-        app:iconGravity="textStart"
         app:iconTint ="@color/black"
         />
 
@@ -65,25 +44,10 @@
         android:id="@+id/settings_button"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
-        app:cornerRadius = "@dimen/main_corners_radius"
-        android:backgroundTint="@color/white"
-        android:layout_marginTop="5dp"
-        android:fontFamily="@font/ys_display"
         android:text="@string/settings"
-        android:textStyle="bold"
-        android:textSize="@dimen/main_screen_text_size"
-        android:letterSpacing="@dimen/main_letters_spacing"
-        android:textAllCaps="false"
-        android:textColor="@color/black"
         app:icon="@drawable/settings_ic"
-        app:iconGravity ="textStart"
         app:iconTint="@color/black"
+        style = "@style/MenuButtons"
         />
-
-
-
-
-
 
 </LinearLayout>
