--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -4,32 +4,28 @@
     android:layout_height="match_parent"
     android:layout_width="match_parent"
     android:orientation="vertical"
-    android:padding="@dimen/default_padding">
+    android:padding="@dimen/default_padding"
+    style="">
 
     <LinearLayout
+        android:id="@+id/back_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="center">
 
         <ImageView
-            android:id="@+id/back_button"
-            android:layout_width="16dp"
-            android:layout_height="16dp"
             android:src="@drawable/back_ic"
+            style="@style/BackButton"
              />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/ys_display"
             android:layout_marginStart="25dp"
             android:text="@string/settings"
-            android:textSize="@dimen/main_screen_text_size"
-            android:textColor="@color/black"
-            android:letterSpacing="@dimen/main_letters_spacing"
-            android:textStyle="bold"
-            android:textAllCaps="false"/>
+            style="@style/SettingsMainString"/>
+
     </LinearLayout>
 
     <LinearLayout
@@ -41,19 +37,13 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:fontFamily="@font/ys_display"
-            android:gravity="center"
-            android:letterSpacing="@dimen/main_letters_spacing"
             android:text="@string/dark_mode"
-            android:textColor="@color/black"
-            android:textSize="@dimen/settings_text_size" />
+            style="@style/SettingsStrings"/>
 
-        <Space
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_weight="1" />
+        <Space style="@style/SettingsSpacing"/>
 
         <Switch
+            android:id="@+id/theme_switcher"
             android:layout_width="48dp"
             android:layout_height="48dp"
             android:gravity= "center"
@@ -63,6 +53,7 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/share_application"
         android:layout_width="match_parent"
         android:layout_height="@dimen/settings_height"
         android:orientation="horizontal">
@@ -70,17 +61,10 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:gravity="center"
-            android:textSize="@dimen/settings_text_size"
-            android:textColor="@color/black"
-            android:fontFamily="@font/ys_display"
             android:text="@string/share_apl"
-            android:letterSpacing="@dimen/main_letters_spacing"/>
+            style="@style/SettingsStrings"/>
 
-        <Space
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_weight="1" />
+        <Space style="@style/SettingsSpacing"/>
 
         <ImageView
             android:layout_width="wrap_content"
@@ -91,6 +75,7 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/contact_support"
         android:layout_width="match_parent"
         android:layout_height="@dimen/settings_height"
         android:orientation="horizontal">
@@ -98,17 +83,11 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:gravity="center"
-            android:textSize="@dimen/settings_text_size"
-            android:textColor="@color/black"
-            android:fontFamily="@font/ys_display"
+            style="@style/SettingsStrings"
             android:text="@string/write_support"
-            android:letterSpacing="@dimen/main_letters_spacing"/>
+            />
 
-        <Space
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_weight="1" />
+        <Space style="@style/SettingsSpacing" />
 
         <ImageView
             android:layout_width="wrap_content"
@@ -119,6 +98,7 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/terms_of_use"
         android:layout_width="match_parent"
         android:layout_height="@dimen/settings_height"
         android:orientation="horizontal">
@@ -126,17 +106,11 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:gravity="center"
-            android:textSize="@dimen/settings_text_size"
-            android:textColor="@color/black"
-            android:fontFamily="@font/ys_display"
+            style="@style/SettingsStrings"
             android:text="@string/terms_of_use"
-            android:letterSpacing="@dimen/main_letters_spacing"/>
+            />
 
-        <Space
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_weight="1" />
+        <Space style="@style/SettingsSpacing"/>
 
         <ImageView
             android:layout_width="wrap_content"
