--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFF</color>
     <color name = "background_color">#3772E7</color>
-
+    <color name="light_gray">#E6E8EB</color>
+    <color name="text_gray">#AEAFB4</color>
 
 </resources>
