--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:orientation="vertical"
     android:padding="@dimen/default_padding"
+    android:background="?attr/colorPrimary"
     style="">
 
     <LinearLayout
