--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="MenuButtons" parent="Widget.MaterialComponents.Button">
+    <style name="MenuButtons" parent="Widget.MaterialComponents.Button.UnelevatedButton">
         <item name = "cornerRadius">16dp </item>
         <item name="android:textAllCaps">false</item>
         <item name="android:textSize">22sp</item>
@@ -24,7 +24,7 @@
     </style>
 
     <style name ="SettingsStrings">
-        <item name="android:fontFamily">@font/ys_display_medium</item>
+        <item name="android:fontFamily">@font/ys_display_regular</item>
         <item name="android:gravity">center</item>
         <item name="android:letterSpacing">-0.02</item>
         <item name="android:textColor">@color/white</item>
