--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,5 @@
     <color name = "background_color">#3772E7</color>
     <color name="light_gray">#E6E8EB</color>
     <color name="text_gray">#AEAFB4</color>
-
+    <color name="night_theme_bg">#1A1B22</color>
 </resources>
