--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -24,7 +24,7 @@
     </style>
 
     <style name ="SettingsStrings">
-        <item name="android:fontFamily">@font/ys_display_medium</item>
+        <item name="android:fontFamily">@font/ys_display_regular</item>
         <item name="android:gravity">center</item>
         <item name="android:letterSpacing">-0.02</item>
         <item name="android:textColor">@color/black</item>
