--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="light_gray">#E6E8EB</color>
     <color name="text_gray">#AEAFB4</color>
     <color name="night_theme_bg">#1A1B22</color>
+    <color name="gray_ic">#AEAFB4</color>
 </resources>
