--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -5,5 +5,6 @@
         <item name="colorPrimary">@color/night_theme_bg</item>
         <item name="colorSecondary">@color/night_theme_bg</item>
         <item name="android:statusBarColor">@color/black</item>
+        <item name="colorControlActivated">@color/background_color</item>
     </style>
 </resources>
