--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -53,8 +53,33 @@
        <item name="android:drawableStart">@drawable/search_ic_search_activity</item>
     </style>
 
+    <style name="TrackName">
+        <item name="android:maxLines">1</item>
+        <item name="android:ellipsize">end</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:fontFamily">@font/ys_display_regular</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:letterSpacing">@dimen/main_letters_spacing</item>
+    </style>
 
+    <style name="AuthorAndDur">
+        <item name="fontFamily">@font/ys_display_regular</item>
+        <item name="android:textSize">11sp</item>
+        <item name="android:textColor">@color/text_gray</item>
+        <item name="android:ellipsize">end</item>
+        <item name="android:maxLines">1</item>
+        <item name="android:letterSpacing">@dimen/main_letters_spacing</item>
+    </style>
 
+    <style name="Arrow">
+        <item name="android:src">@drawable/arrow_right</item>
+        <item name="android:layout_marginStart">32dp</item>
+        <item name="android:layout_gravity">center_vertical</item>
+    </style>
 
-
+    <style name="Dot">
+        <item name="android:src">@drawable/ellipse</item>
+        <item name="android:layout_marginStart">5dp</item>
+        <item name="android:layout_gravity">center_vertical</item>
+    </style>
 </resources>
