--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -84,4 +84,29 @@
         <item name="android:layout_gravity">center_vertical</item>
     </style>
 
+    <style name="ServerErrorImg">
+        <item name="android:src">@drawable/server_error_placeholder_night</item>
+    </style>
+
+    <style name="NothingFoundImg">
+        <item name="android:src">@drawable/nothing_found_placeholder_night</item>
+    </style>
+
+    <style name="ErrorTextAndNothingFoundText">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">19sp</item>
+        <item name="android:fontFamily">@font/ys_display_medium</item>
+        <item name="android:textAlignment">center</item>
+    </style>
+
+    <style name="updateButton">
+        <item name="cornerRadius">54dp</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:fontFamily">@font/ys_display_medium</item>
+        <item name="android:letterSpacing">@dimen/main_letters_spacing</item>
+        <item name="android:backgroundTint">@color/white</item>
+        <item name="android:textColor">@color/night_theme_bg</item>
+    </style>
+
 </resources>
