--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -68,6 +68,7 @@
         <item name="android:textColor">@color/text_gray</item>
         <item name="android:ellipsize">end</item>
         <item name="android:maxLines">1</item>
+        <item name="android:singleLine">true</item>
         <item name="android:letterSpacing">@dimen/main_letters_spacing</item>
     </style>
 
@@ -81,5 +82,30 @@
         <item name="android:src">@drawable/ellipse</item>
         <item name="android:layout_marginStart">5dp</item>
         <item name="android:layout_gravity">center_vertical</item>
+    </style>
+
+    <style name="ServerErrorImg">
+        <item name="android:src">@drawable/server_error_placeholder</item>
+    </style>
+
+    <style name="NothingFoundImg">
+        <item name="android:src">@drawable/nothing_found_placeholder</item>
+    </style>
+
+    <style name="ErrorTextAndNothingFoundText">
+        <item name="android:textColor">@color/night_theme_bg</item>
+        <item name="android:textSize">19sp</item>
+        <item name="android:fontFamily">@font/ys_display_medium</item>
+        <item name="android:textAlignment">center</item>
+    </style>
+    
+    <style name="updateButton">
+        <item name="cornerRadius">54dp</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:fontFamily">@font/ys_display_medium</item>
+        <item name="android:letterSpacing">@dimen/main_letters_spacing</item>
+        <item name="android:backgroundTint">@color/night_theme_bg</item>
+        <item name="android:textColor">@color/white</item>
     </style>
 </resources>
