--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -31,6 +31,16 @@
         <item name="android:textSize">16sp</item>
     </style>
 
+    <style name="Switch" parent="Theme.MyApp">
+        <item name="android:textAllCaps">false</item>
+        <item name="android:letterSpacing">-0.02</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="thumbTint">@drawable/switch_thumb_selector_night</item>
+
+
+    </style>
+
     <style name="SettingsSpacing">
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">0dp</item>
@@ -107,6 +117,30 @@
         <item name="android:letterSpacing">@dimen/main_letters_spacing</item>
         <item name="android:backgroundTint">@color/white</item>
         <item name="android:textColor">@color/night_theme_bg</item>
+    </style>
+
+    <style name="clearHistoryButton">
+        <item name="android:layout_marginTop">20dp</item>
+        <item name="android:textColor">@color/night_theme_bg</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="cornerRadius">54dp</item>
+        <item name="android:letterSpacing">-0.02</item>
+        <item name="android:fontFamily">@font/ys_display_medium</item>
+        <item name="android:text">@string/clear_search_history</item>
+        <item name="android:layout_gravity">center</item>
+        <item name="android:backgroundTint">@color/white</item>
+    </style>
+
+    <style name="youSearch">
+        <item name="android:text">@string/you_search</item>
+        <item name="android:fontFamily">@font/ys_display_medium</item>
+        <item name="android:textSize">19sp</item>
+        <item name="android:layout_marginTop">36dp</item>
+        <item name="android:padding">16dp</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:gravity">center</item>
+        <item name="android:visibility">visible</item>
     </style>
 
 </resources>
