--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -143,4 +143,57 @@
         <item name="android:visibility">visible</item>
     </style>
 
+    <style name="audioPlayerText">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:fontFamily">@font/ys_display_medium</item>
+    </style>
+
+    <style name="play_ic">
+        <item name="android:foreground">?attr/selectableItemBackground</item>
+        <item name="android:layout_marginTop">24dp</item>
+        <item name="android:src">@drawable/play_night</item>
+    </style>
+
+    <style name="add_to_playlist">
+        <item name="android:layout_marginStart">24dp</item>
+        <item name="android:foreground">?attr/selectableItemBackground</item>
+        <item name="android:src">@drawable/add_to_playlist_night</item>
+    </style>
+
+    <style name="favorite">
+        <item name="android:layout_marginEnd">24dp</item>
+        <item name="android:foreground">?attr/selectableItemBackground</item>
+        <item name="android:src">@drawable/favorite_night</item>
+    </style>
+
+    <style name="timer">
+        <item name="android:layout_marginTop">4dp</item>
+        <item name="android:fontFamily">@font/ys_display_medium</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textAlignment">center</item>
+    </style>
+
+    <style name="audioPlayerSubj">
+        <item name="android:layout_marginStart">14dp</item>
+        <item name="android:textSize">13sp</item>
+        <item name="android:textColor">@color/text_gray</item>
+        <item name="android:fontFamily">@font/ys_display_regular</item>
+    </style>
+
+    <style name="trackDescription">
+        <item name="android:layout_marginEnd">14dp</item>
+        <item name="android:ellipsize">end</item>
+        <item name="android:maxLines">1</item>
+        <item name="android:textSize">13sp</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:fontFamily">@font/ys_display_regular</item>
+        <item name="android:textAlignment">textEnd</item>
+    </style>
+
+    <style name="audioPlayerBackIc">
+        <item name="icon">@drawable/back_ic</item>
+        <item name="iconTint">@color/white</item>
+    </style>
+
 </resources>
