--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -1,40 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
-xmlns:tools="http://schemas.android.com/tools"
-    android:layout_height="match_parent"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    style=""
     android:layout_width="match_parent"
-    android:orientation="vertical"
-    android:padding="@dimen/default_padding"
+    android:layout_height="match_parent"
     android:background="?attr/colorPrimary"
-    style="">
+    android:orientation="vertical"
+    android:padding="@dimen/default_padding">
 
     <LinearLayout
         android:id="@+id/back_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center">
+        android:gravity="center"
+        android:orientation="horizontal">
 
         <ImageView
-            android:src="@drawable/back_ic"
             style="@style/BackButton"
-            />
+            android:src="@drawable/back_ic" />
 
         <TextView
+            style="@style/SettingsMainString"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="25dp"
-            android:text="@string/search"
-            style="@style/SettingsMainString"/>
+            android:text="@string/search" />
 
     </LinearLayout>
 
     <FrameLayout
+        android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
-        android:id="@+id/container">
+        android:layout_marginTop="40dp">
 
         <EditText
             android:id="@+id/inputEditText"
@@ -44,14 +44,13 @@ xmlns:tools="http://schemas.android.com/tools"
             android:background="@drawable/rounded_edit_text"
             android:drawablePadding="8dp"
             android:hint="@string/search"
+            android:imeOptions="actionDone"
             android:inputType="textCapSentences"
             android:lines="1"
-            android:imeOptions="actionDone"
-            android:singleLine="true"
             android:paddingStart="12dp"
+            android:singleLine="true"
             android:textSize="16sp"
             tools:ignore="TouchTargetSizeCheck" />
-
 
 
         <ImageView
@@ -59,9 +58,9 @@ xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end|center_vertical"
+            android:layout_marginEnd="8dp"
             android:src="@drawable/clear_ic"
-            android:visibility="gone"
-            android:layout_marginEnd="8dp"/>
+            android:visibility="gone" />
 
 
     </FrameLayout>
@@ -69,54 +68,65 @@ xmlns:tools="http://schemas.android.com/tools"
     <TextView
 
         android:id="@+id/you_search"
+        style="@style/youSearch"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        style="@style/youSearch"/>
+        android:layout_height="wrap_content" />
 
 
     <androidx.core.widget.NestedScrollView
         android:id="@+id/scrollView"
         android:layout_width="match_parent"
-        android:layout_marginTop="12dp"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginTop="12dp">
+
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
+
+
+            <ProgressBar
+                android:id="@+id/progressBar"
+                style="@style/progressBar"
+                android:layout_width="44dp"
+                android:layout_height="44dp"
+                android:layout_gravity="center"
+                android:visibility="gone" />
 
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recyclerView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:visibility="visible"
-                android:nestedScrollingEnabled="false"
-                />
+                android:nestedScrollingEnabled="false" />
 
 
             <Button
                 android:id="@+id/history_clean_button"
+                style="@style/clearHistoryButton"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                style="@style/clearHistoryButton"/>
-        </LinearLayout>
+                android:layout_height="wrap_content" />
 
+        </LinearLayout>
 
     </androidx.core.widget.NestedScrollView>
 
-    <include layout="@layout/nothing_found_placeholder"
-        android:visibility="gone"
-        android:layout_marginTop="70dp"
-        android:layout_gravity="center"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
 
-    <include layout="@layout/server_error_placeholder"
-        android:visibility="gone"
-        android:layout_marginTop="70dp"
-        android:layout_gravity="center"
+    <include
+        layout="@layout/nothing_found_placeholder"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="70dp"
+        android:visibility="gone" />
+
+    <include
+        layout="@layout/server_error_placeholder"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="70dp"
+        android:visibility="gone" />
 
 </LinearLayout>
