--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -118,7 +118,7 @@
     </style>
 
     <style name="clearHistoryButton">
-        <item name="android:layout_marginTop">20dp</item>
+        <item name="android:layout_marginTop">10dp</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:textSize">14sp</item>
         <item name="android:textAllCaps">false</item>
@@ -193,5 +193,10 @@
     <style name="audioPlayerBackIc">
         <item name="icon">@drawable/back_ic</item>
         <item name="iconTint">@color/black</item>
+    </style>
+
+    <style name="progressBar">
+        <item name="android:indeterminateTint">@color/black</item>
+        <item name="android:layout_marginTop">200dp</item>
     </style>
 </resources>
