--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -197,7 +197,7 @@
     </style>
 
     <style name="progressBar">
-        <item name="android:indeterminateTint">@color/white</item>
+        <item name="android:indeterminateTint">@color/progress_bar_blue</item>
         <item name="android:layout_marginTop">200dp</item>
     </style>
 
