Completed homework 16 sprint Суммарно 15 часов внесения правок в код)))))) Было исправлено: 1. Баг при котором таймер не обнулялся. 2. Цвет прогрес бара 3. Вся работа с SharedPreferences происходит в data слое. В ui слое её больше нет. 4. В классе Track метод андроид sdk Parcel заменен на Serializable 5. Activity получает все данные подписываясь на LiveData 6. В AudioPlayerActivity пришлось много править код, чтобы метод isPlaying() использовался только в viewModel, пытался сделать без этого метода, что-то вроде if(_playerState.value == PlayerState.PLAYING), но при использовании такого способа, переставал работать таймер и кнопка паузы (просидел с этим багом больше всего времени)))) 7. _playerState и _playerCurrentPosition объединены в _playerState по средством sealed interface PlayerState Заранее спасибо за проверку <3

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,5 @@
     <color name="text_gray">#AEAFB4</color>
     <color name="night_theme_bg">#1A1B22</color>
     <color name="gray_ic">#AEAFB4</color>
-    <color name="progress_bar_blue">#6200EE</color>
+    <color name="progress_bar_blue">#3772E7</color>
 </resources>
