--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -119,7 +119,7 @@
         <item name="android:textColor">@color/night_theme_bg</item>
     </style>
 
-    <style name="clearHistoryButton">
+    <style name="smallButtonStyle">
         <item name="android:layout_marginTop">20dp</item>
         <item name="android:textColor">@color/night_theme_bg</item>
         <item name="android:textSize">14sp</item>
@@ -199,6 +199,24 @@
     <style name="progressBar">
         <item name="android:indeterminateTint">@color/progress_bar_blue</item>
         <item name="android:layout_marginTop">200dp</item>
+    </style>
+
+    <style name="mediatekaText">
+        <item name="android:textSize">19sp</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:fontFamily">@font/ys_display_medium</item>
+        <item name="android:gravity">center</item>
+    </style>
+
+    <style name="tabStyle">
+        <item name="android:backgroundTint">@color/night_theme_bg</item>
+        <item name="tabIndicatorColor">@color/white</item>
+    </style>
+
+    <style name="tabText">
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textFontWeight">500</item>
     </style>
 
 </resources>
