--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,4 +7,9 @@
     <dimen name="settings_height">61dp</dimen>
     <dimen name="settings_text_size">16sp</dimen>
     <dimen name="default_padding">15dp</dimen>
+    <dimen name="margin26">26dp</dimen>
+    <dimen name="margin16">16dp</dimen>
+    <dimen name="margin48">48dp</dimen>
+    <dimen name="margin110">110dp</dimen>
+    <dimen name="margin124">124dp</dimen>
 </resources>
