--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -18,7 +18,7 @@
     <style name="SettingsMainString">
         <item name="android:fontFamily">@font/ys_display_medium</item>
         <item name="android:textSize">@dimen/main_screen_text_size</item>
-        <item name="android:textColor">@color/black</item>
+        <item name="android:textColor">@color/night_theme_bg</item>
         <item name="android:letterSpacing">@dimen/main_letters_spacing</item>
         <item name="android:textAllCaps">false</item>
     </style>
@@ -117,7 +117,7 @@
         <item name="android:textColor">@color/white</item>
     </style>
 
-    <style name="clearHistoryButton">
+    <style name="smallButtonStyle">
         <item name="android:layout_marginTop">10dp</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:textSize">14sp</item>
@@ -125,7 +125,6 @@
         <item name="cornerRadius">54dp</item>
         <item name="android:letterSpacing">-0.02</item>
         <item name="android:fontFamily">@font/ys_display_medium</item>
-        <item name="android:text">@string/clear_search_history</item>
         <item name="android:layout_gravity">center</item>
         <item name="android:backgroundTint">@color/night_theme_bg</item>
     </style>
@@ -198,5 +197,23 @@
     <style name="progressBar">
         <item name="android:indeterminateTint">@color/progress_bar_blue</item>
         <item name="android:layout_marginTop">200dp</item>
+    </style>
+
+    <style name="mediatekaText">
+        <item name="android:textSize">19sp</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:fontFamily">@font/ys_display_medium</item>
+        <item name="android:gravity">center</item>
+    </style>
+
+    <style name="tabStyle">
+        <item name="android:backgroundTint">@color/white</item>
+        <item name="tabIndicatorColor">@color/night_theme_bg</item>
+    </style>
+
+    <style name="tabText">
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">@color/night_theme_bg</item>
+
     </style>
 </resources>
