--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,53 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="@dimen/default_padding"
-    android:background="?attr/colorSecondary"
-    android:orientation="vertical"
-    style="@style/Theme.MyApp">
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="56dp"
-        android:text="@string/app_name"
-        android:fontFamily="@font/ys_display_medium"
-        android:textColor="@color/white"
-        android:textSize="@dimen/main_screen_text_size"
-        android:letterSpacing="@dimen/main_letters_spacing" />
+    tools:context=".main.ui.MainActivity">
 
 
-    <Button
-        android:id="@+id/search_button"
-        android:layout_width="match_parent"
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/nav_host_fragment"
+        android:name="androidx.navigation.fragment.NavHostFragment"
+        android:layout_width="0dp"
         android:layout_height="0dp"
-        android:text="@string/search"
-        app:icon = "@drawable/search_ic"
-        app:iconTint="@color/black"
-        style="@style/MenuButtons">
+        app:defaultNavHost="true"
+        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
 
-    </Button>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:navGraph="@navigation/nav_graph" />
 
-
-    <Button
-        android:id="@+id/mediateka_button"
+    <View
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:text="@string/mediateka"
-        style="@style/MenuButtons"
-        app:icon="@drawable/music_ic"
-        app:iconTint ="@color/black"
-        />
+        android:layout_height="1dp"
+        android:background="@color/light_gray"
+        app:layout_constraintBottom_toTopOf="@id/bottomNavigationView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/nav_host_fragment" />
 
-    <Button
-        android:id="@+id/settings_button"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:text="@string/settings"
-        app:icon="@drawable/settings_ic"
-        app:iconTint="@color/black"
-        style = "@style/MenuButtons"
-        />
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottomNavigationView"
+        style="@style/bottomNavStyle"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
 
-</LinearLayout>
+        app:itemRippleColor="@color/background_color"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:menu="@menu/bottom_navigation_menu" />
+</androidx.constraintlayout.widget.ConstraintLayout>
