--- a/app/src/main/res/layout/fragment_mediateka.xml
+++ b/app/src/main/res/layout/fragment_mediateka.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="?attr/colorPrimary"
     android:orientation="vertical"
-    android:padding="15dp">
+    android:padding="15dp"
+    tools:context="mediateka.ui.MediatekaFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -14,16 +14,12 @@
         android:gravity="center"
         android:orientation="horizontal">
 
-        <ImageView
-            android:id="@+id/mediateka_back"
-            style="@style/BackButton"
-            android:src="@drawable/back_ic" />
 
         <TextView
             style="@style/SettingsMainString"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="25dp"
+
             android:text="@string/mediateka" />
 
     </LinearLayout>
