--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -1,49 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_height="match_parent"
+    style=""
     android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="?attr/colorPrimary"
     android:orientation="vertical"
     android:padding="@dimen/default_padding"
-    android:background="?attr/colorPrimary"
-    style="">
+    tools:context=".settings.ui.activity.SettingsFragment">
 
     <LinearLayout
         android:id="@+id/back_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center">
+        android:gravity="center"
+        android:orientation="horizontal">
 
-        <ImageView
-            android:src="@drawable/back_ic"
-            style="@style/BackButton"
-             />
 
         <TextView
+            style="@style/SettingsMainString"
             android:layout_width="match_parent"
+
             android:layout_height="wrap_content"
-            android:layout_marginStart="25dp"
-            android:text="@string/settings"
-            style="@style/SettingsMainString"/>
+            android:text="@string/settings" />
 
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/settings_height"
-        android:orientation="horizontal"
+        android:layout_marginTop="40dp"
         android:gravity="center"
-        android:layout_marginTop="40dp">
+        android:orientation="horizontal">
 
 
         <com.google.android.material.switchmaterial.SwitchMaterial
             android:id="@+id/theme_switcher"
+            style="@style/Switch"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="start|center_vertical"
-            android:text="@string/dark_mode"
-            style="@style/Switch" />
+            android:text="@string/dark_mode" />
 
     </LinearLayout>
 
@@ -54,20 +51,20 @@
         android:orientation="horizontal">
 
         <TextView
+            style="@style/SettingsStrings"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:text="@string/share_apl"
-            style="@style/SettingsStrings"/>
+            android:text="@string/share_apl" />
 
-        <Space style="@style/SettingsSpacing"/>
+        <Space style="@style/SettingsSpacing" />
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/share_ic"
             android:layout_gravity="center"
             android:layout_marginEnd="11dp"
-            android:contentDescription="@string/share_apl" />
+            android:contentDescription="@string/share_apl"
+            android:src="@drawable/share_ic" />
     </LinearLayout>
 
     <LinearLayout
@@ -77,22 +74,21 @@
         android:orientation="horizontal">
 
         <TextView
+            style="@style/SettingsStrings"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            style="@style/SettingsStrings"
-            android:text="@string/write_support"
-            />
+            android:text="@string/write_support" />
 
         <Space style="@style/SettingsSpacing" />
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/support_ic"
-            android:layout_marginEnd="11dp"
             android:layout_gravity="center"
+            android:layout_marginEnd="11dp"
+            android:contentDescription="@string/write_support"
 
-            android:contentDescription="@string/write_support" />
+            android:src="@drawable/support_ic" />
     </LinearLayout>
 
     <LinearLayout
@@ -102,21 +98,20 @@
         android:orientation="horizontal">
 
         <TextView
+            style="@style/SettingsStrings"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            style="@style/SettingsStrings"
-            android:text="@string/terms_of_use"
-            />
+            android:text="@string/terms_of_use" />
 
-        <Space style="@style/SettingsSpacing"/>
+        <Space style="@style/SettingsSpacing" />
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/accept_ic"
-            android:layout_marginEnd="11dp"
             android:layout_gravity="center"
-            android:contentDescription="@string/terms_of_use" />
+            android:layout_marginEnd="11dp"
+            android:contentDescription="@string/terms_of_use"
+            android:src="@drawable/accept_ic" />
 
     </LinearLayout>
 </LinearLayout>
