--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -214,6 +214,11 @@
     <style name="tabText">
         <item name="android:textSize">14sp</item>
         <item name="android:textColor">@color/night_theme_bg</item>
+    </style>
 
+    <style name="bottomNavStyle">
+        <item name="android:background">@color/white</item>
+        <item name="itemTextColor">@color/bottom_nav_item_color</item>
+        <item name="itemIconTint">@color/bottom_nav_item_color</item>
     </style>
 </resources>
