Completed homework 20 sprint) Если что-то неправильно подскажите, как решить))) Заранее спасибо за проверку 2 коммит

--- a/app/src/main/res/layout/fragment_mediateka.xml
+++ b/app/src/main/res/layout/fragment_mediateka.xml
@@ -6,7 +6,7 @@
     android:background="?attr/colorPrimary"
     android:orientation="vertical"
     android:padding="15dp"
-    tools:context="mediateka.ui.MediatekaFragment">
+    tools:context=".mediateka.ui.MediatekaFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
