--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -11,7 +11,7 @@
         android:label="SearchFragment" />
     <fragment
         android:id="@+id/mediatekaFragment"
-        android:name="mediateka.ui.MediatekaFragment"
+        android:name="com.practicum.playlistmaker.mediateka.ui.MediatekaFragment"
         android:label="fragment_mediateka"
         tools:layout="@layout/fragment_mediateka" />
     <fragment
