--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -163,7 +163,7 @@
     <style name="favorite">
         <item name="android:layout_marginEnd">24dp</item>
         <item name="android:foreground">?attr/selectableItemBackground</item>
-        <item name="android:src">@drawable/favorite_night</item>
+        <item name="android:src">@drawable/unfavorite</item>
     </style>
 
     <style name="timer">
