--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -161,7 +161,7 @@
     <style name="favorite">
         <item name="android:layout_marginEnd">24dp</item>
         <item name="android:foreground">?attr/selectableItemBackground</item>
-        <item name="android:src">@drawable/favorite</item>
+        <item name="android:src">@drawable/unfavorite</item>
     </style>
     
     <style name="timer">
