--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -276,7 +276,27 @@
     </style>
 
     <style name="CustomAlertDialogTheme" parent="ThemeOverlay.MaterialComponents.MaterialAlertDialog">
-        <item name="colorPrimary">@color/black</item> <!-- Цвет положительной кнопки -->
-        <item name="colorSecondary">@color/black</item> <!-- Цвет нейтральной кнопки -->
+        <item name="colorPrimary">@color/background_color</item>
+        <item name="colorSecondary">@color/background_color</item>
+        <item name="colorOnSurface">@color/black</item>
+        <item name="android:background">@color/white</item>
+    </style>
+
+    <style name="menu_style">
+        <item name="android:textSize">16sp</item>
+        <item name="android:fontFamily">@font/ys_display_regular</item>
+        <item name="android:textFontWeight">400</item>
+        <item name="android:paddingHorizontal">16dp</item>
+        <item name="android:paddingVertical">22dp</item>
+        <item name="android:textColor">@color/black</item>
+    </style>
+
+    <style name="placeholder_message">
+        <item name="android:textSize">19sp</item>
+        <item name="android:fontFamily">@font/ys_display_medium</item>
+        <item name="android:textFontWeight">400</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:layout_gravity">center</item>
+        <item name="android:layout_marginTop">30dp</item>
     </style>
 </resources>
